--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -42,10 +42,10 @@ layout: default
     </header>
     <!-- ./header -->
 
-    <div class="section" id="home" data-stellar-background-ratio="0.5">
+    <div class="section" id="post_home" data-stellar-background-ratio="0.5" --background_link = "../Figures/main.jpg">
         <div class="container">
             <div class="disply-table">
-                <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
+                <div class="table-cell" data-aos="fade-up" data-aos-delay="0" background = "../Figures/main.jpg">
                     <h1><span class='W'>{{page.title}}</span></h1>
                     <h4>{{page.extra}}</h4></div>
             </div>
