--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -42,7 +42,10 @@ layout: default
     </header>
     <!-- ./header -->
 
-    <div class="section" id="post_home" data-stellar-background-ratio="0.5" style="background: url(/Figures/{{page.img}})">
+    <div class="section" id="post_home" data-stellar-background-ratio="0.5"
+    style="background: url(/Figures/{{page.img}});
+    background-size: auto;
+    height: 100vh;">
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0" background = "../Figures/main.jpg">
