--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -1,6 +1,12 @@
 ---
 layout: default
+mathjax: true
 ---
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+  TeX: { equationNumbers: { autoNumber: "AMS" } }
+});
+</script>
 
 <head>
     <meta charset="utf-8">
@@ -55,9 +61,20 @@ layout: default
         </div>
     </div>
 
-    <div class="section" id="contact">
-      {{content}}
-    </div>
+
+
+    {% include mathjax.html %}
+    <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
+
+      <header class="post-header">
+        <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+        <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+      </header>
+
+      <div class="post-content" itemprop="articleBody">
+        {{ content }}
+      </div>
+    </article>
 
 
     <!-- jQuery -->
