--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -60,7 +60,7 @@ mathjax: true
 
 
     {% include mathjax.html %}
-      <div class="post-content" itemprop="articleBody">
+      <div class="section" id="post" >
         {{ content }}
       </div>
 
