--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -59,9 +59,12 @@ mathjax: true
 
 
 
-    {% include mathjax.html %}
       <div class="section" id="post" >
-        {{ content }}
+        <div class="container">
+          <div class="center">
+            {{ content }}
+          </div>
+        </div>
       </div>
 
 
