--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,9 @@ a.active {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
-  border: 3px solid green;
+}
+.center{
+  text-align: center;
 }
 
 /* post section
