--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -62,7 +62,10 @@ mathjax: true
       <div class="section" id="post" >
         <div class="container">
           <div class="center">
+            <div class="col-md-8 col-md-offset-2">
+
             {{ content }}
+            </div>
           </div>
         </div>
       </div>
