--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -61,11 +61,9 @@ mathjax: true
 
       <div class="section" id="post" >
         <div class="container">
-          <div class="center">
-            <div class="col-md-8 col-md-offset-2">
+            <div class="col-md-8">
             {{ content }}
             </div>
-          </div>
         </div>
       </div>
 
