--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -58,7 +58,7 @@ mathjax: true
     </div>
 
 
-
+    {% include mathjax.html %}
       <div class="section" id="post" >
         <div class="container">
             <div class="col-md-8">
