--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -61,13 +61,13 @@ mathjax: true
     {% include mathjax.html %}
       <div class="section" id="post" >
         <div class="container">
-            <div class="col-md-8">
+            <div class="col-md-8 col-sm-8">
             {{ content }}
             </div>
         </div>
       </div>
 
-      <section id="about-us" class="about-us">
+    <section id="about-us" class="about-us">
       <div class="container-fluid">
           <div class="row">
               <div class="col-md-3  col-md-offset-3 col-sm-3 col-sm-offset-3"> //see here we added the two offset classes
@@ -89,7 +89,7 @@ mathjax: true
               </div>
           </div>
       </div>
-  </section>
+   </section>
 
 
     <script type="text/x-mathjax-config">
