--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -61,7 +61,7 @@ mathjax: true
     {% include mathjax.html %}
       <div class="section" id="post" >
         <div class="container">
-            <div class="col-md-8 col-sm-8">
+            <div class="col-md-4">
             {{ content }}
             </div>
         </div>
