--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,9 @@ a.active {
   margin: 0 auto;
 }
 .center{
+   margin-left:auto;
+   margin-right:auto;
+   display:block;
   text-align: center;
 }
 
