--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -61,7 +61,8 @@ mathjax: true
     {% include mathjax.html %}
       <div class="section" id="post" >
         <div class="container">
-            <div class="center">
+            <!-- <div class="center"> -->
+              <div class="col-md-8 col-md-offset-2">
             {{ content }}
             </div>
         </div>
