--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,7 @@ a.active {
    margin-left:auto;
    margin-right:auto;
    display:block;
-  text-align: center;
+   width: 50%;
 }
 
 /* post section
