--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -62,9 +62,12 @@ mathjax: true
       <div class="section" id="post" >
         <div class="container">
             <!-- <div class="center"> -->
-            <div class="col-md-8 col-md-offset-2">
+            <!-- <div class="col-md-8 col-md-offset-2"> -->
+              <p align="center">
+
               {{ content }}
-            </div>
+              </p>
+            <!-- </div> -->
         </div>
       </div>
 
