--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -62,12 +62,11 @@ mathjax: true
       <div class="section" id="post" >
         <div class="container">
             <!-- <div class="center"> -->
-            <!-- <div class="col-md-8 col-md-offset-2"> -->
-              <p align="center">
-
+            <div class="col-md-8 col-md-offset-2">
+              <!-- <p align="center"> -->
               {{ content }}
-              </p>
-            <!-- </div> -->
+              <!-- </p> -->
+            </div>
         </div>
       </div>
 
