--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -63,6 +63,7 @@ mathjax: true
         <div class="container">
             <!-- <div class="center"> -->
             <div class="col-md-8 col-md-offset-2">
+                <div class="h-50"></div>
               <!-- <p align="center"> -->
               {{ content }}
               <!-- </p> -->
