--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -9,7 +9,7 @@ mathjax: true
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{page.title}}</title>
-    <!-- <link rel="icon" href="Figures/icon.png" type="image/x-icon"> -->
+    <link rel="icon" href="/Figures/icon.png" type="image/x-icon">
     <!-- Bootstrap -->
     <link href= "/css/bootstrap.min.css" rel="stylesheet">
     <link href="/ionicons/css/ionicons.min.css" rel="stylesheet">
