--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -71,6 +71,8 @@ mathjax: true
           </div>
        </div>
 
+    {% include disqus.html %}
+
 
     <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
