--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -71,7 +71,14 @@ mathjax: true
           </div>
        </div>
 
-    {% include disqus.html %}
+       <div class="section" id="post" >
+         <div class="container">
+              <div class="col-md-8 col-md-offset-2">
+                 <div class="h-50"></div>
+                  {% include disqus.html %}
+              </div>
+            </div>
+         </div>
 
 
     <script type="text/x-mathjax-config">
