--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -71,14 +71,17 @@ mathjax: true
           </div>
        </div>
 
-       <div class="section" id="post" >
-         <div class="container">
-              <div class="col-md-8 col-md-offset-2">
-                 <div class="h-50"></div>
-                  {% include disqus.html %}
-              </div>
-            </div>
-         </div>
+      <div class="section" id="post" >
+        <div class="container">
+          <div class="col-md-8 col-md-offset-2">
+            <div class="h-50"></div>
+              {% include disqus.html %}
+          </div>
+        </div>
+      </div>
+
+      {% include share-buttons.html %}
+
 
 
     <script type="text/x-mathjax-config">
