--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -80,7 +80,7 @@ mathjax: true
         </div>
       </div>
 
-      {% include share-buttons.html %}
+      {% include share_buttons.html %}
 
 
 
