--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -98,7 +98,9 @@ mathjax: true
         </div>
       </div>
 
-      {% include share_buttons.html %}
+      <style id="share-bar">
+        {% include share_buttons.html %}
+      </style>
 
 
 
