--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -98,9 +98,11 @@ mathjax: true
         </div>
       </div>
 
-      <style id="share-bar">
-        {% include share_buttons.html %}
-      </style>
+      <div class="section" id="share-bar" >
+        <div class="container">
+          {% include share_buttons.html %}
+        </div>
+      </div>
 
 
 
