--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -98,11 +98,13 @@ mathjax: true
         </div>
       </div>
 
-      <div class="section" id="share-bar" >
-        <div class="container">
-          {% include share_buttons.html %}
-        </div>
+      <div class="a2a_kit a2a_kit_size_32 a2a_floating_style a2a_vertical_style addtoany_list" style="left:0px; top:150px;>
+        <div class="section" id="share-bar" >
+          <div class="container">
+            {% include share_buttons.html %}
+          </div>
       </div>
+
 
 
 
