--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -98,11 +98,10 @@ mathjax: true
         </div>
       </div>
 
-      <div class="a2a_kit a2a_kit_size_32 a2a_floating_style a2a_vertical_style addtoany_list" style="left:0px; top:150px;>
-        <div class="section" id="share-bar" >
-          <div class="container">
-            {% include share_buttons.html %}
-          </div>
+      <div class="a2a_kit a2a_kit_size_32 a2a_floating_style a2a_vertical_style" style="left:0px; top:150px;">
+      	<a class="a2a_button_facebook_like" data-layout="box_count"></a>
+      	<a class="a2a_button_twitter_tweet"></a>
+      	<a class="a2a_button_google_plusone" data-size="tall"></a>
       </div>
 
 
