--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -98,11 +98,16 @@ mathjax: true
         </div>
       </div>
 
-      <div class="a2a_kit a2a_kit_size_32 a2a_floating_style a2a_vertical_style" style="left:0px; top:150px;">
-      	<a class="a2a_button_facebook_like" data-layout="box_count"></a>
-      	<a class="a2a_button_twitter_tweet"></a>
-      	<a class="a2a_button_google_plusone" data-size="tall"></a>
+      <!-- AddToAny BEGIN -->
+      <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+        <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
+        <a class="a2a_button_facebook"></a>
+        <a class="a2a_button_twitter"></a>
+        <a class="a2a_button_email"></a>
+        <a class="a2a_button_linkedin"></a>
       </div>
+      <script async src="https://static.addtoany.com/menu/page.js"></script>
+      <!-- AddToAny END -->
 
 
 
