--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -42,6 +42,19 @@ mathjax: true
             </ul>
         </nav>
     </header>
+
+
+    <header class="navbar-fixed-right">
+        <nav>
+            <ul>
+              <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
+                <a class="a2a_button_facebook"></a>
+                <a class="a2a_button_twitter"></a>
+            </div>
+          </ul>
+      </nav>
+  </header>
+
     <!-- ./header -->
 
     <div class="section" id="post_home" data-stellar-background-ratio="0.5"
@@ -56,6 +69,8 @@ mathjax: true
             </div>
         </div>
     </div>
+
+
 
 
     {% include mathjax.html %}
@@ -98,19 +113,7 @@ mathjax: true
         </div>
       </div>
 
-      <div class="section" id="share-bar" >
-        <div class="container">
-            <div class="social">
-              <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-                <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
-                <a class="a2a_button_facebook"></a>
-                <a class="a2a_button_twitter"></a>
-                <a class="a2a_button_email"></a>
-                <a class="a2a_button_linkedin"></a>
-            </div>
-          </div>
-        </div>
-      </div>
+
 
 
       <script async src="https://static.addtoany.com/menu/page.js"></script>
