--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -44,7 +44,7 @@ mathjax: true
     </header>
 
 
-    <header class="navbar-fixed-right">
+    <header class="navbar-fixed-bottom">
         <nav>
             <ul>
               <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
