--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -44,7 +44,7 @@ mathjax: true
     </header>
 
 
-    <header class="navbar-fixed-bottom">
+    <!-- <header class="navbar-fixed-bottom">
         <nav>
             <ul>
               <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
@@ -53,7 +53,7 @@ mathjax: true
             </div>
           </ul>
       </nav>
-  </header>
+  </header> -->
 
     <!-- ./header -->
 
