set of changes in web

--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -40,20 +40,12 @@ mathjax: true
                 <li><a href="/">Home</a></li>
                 |
             </ul>
+            <ul style="text-align: left; list-style-type: none;">
+              <li><a href="https://twitter.com/theCamusean"><i class="ion-social-twitter"></i></a></li>
+              <li><a href="https://github.com/TheCamusean"><i class="ion-social-github" ></i></a></li>
+            </ul>
         </nav>
     </header>
-
-
-    <header class="navbar-fixed-bottom" style="text-align: left;">
-        <nav>
-            <ul>
-              <div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-                <a class="a2a_button_facebook"></a>
-                <a class="a2a_button_twitter"></a>
-            </div>
-          </ul>
-      </nav>
-  </header>
 
     <!-- ./header -->
 
