--- a/_layouts/default_good.html
+++ b/_layouts/default_good.html
@@ -192,7 +192,7 @@ layout: default
                 <ul class="social">
                     <li><a href="https://twitter.com/theCamusean"><i class="ion-social-twitter"></i></a></li>
                     <li><a href="https://github.com/TheCamusean"><i class="ion-social-github"></i></a></li>
-                    <li><a href="https://scholar.google.com/citations?user=lx5qencAAAAJ&hl=en" target='blank'><i class="ion-university"></i></a></li>
+                    <li><a href="https://scholar.google.com/citations?user=lx5qencAAAAJ&hl=en"><i class="ion-university"></i></a></li>
                 </ul>
                 <div class="clearfix"></div>
                 <div class="h-50"></div>
