--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -58,6 +58,9 @@ mathjax: true
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0" background = "../Figures/main.jpg">
                     <h1><span class='W'>{{page.title}}</span></h1>
                     <h4>{{page.extra}}</h4></div>
+                    <ul class="social">
+                        <li><a href="https://arxiv.org/abs/1905.11786" target='blank'><i class="ion-document-text"></i></a></li>
+                        <li><a href="https://github.com/loeweX/Greedy_InfoMax" target='blank'><i class="ion-social-github"></i></a></li>
             </div>
         </div>
     </div>
