--- a/_layouts/post_clean.html
+++ b/_layouts/post_clean.html
@@ -57,7 +57,9 @@ mathjax: true
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0" background = "../Figures/main.jpg">
                     <h1><span class='W'>{{page.title}}</span></h1>
-                    <h2> <a href="https://arxiv.org/abs/1905.11786" target='blank'><i class="ion-document-text"></i></a> <a href="https://github.com/loeweX/Greedy_InfoMax" target='blank'><i class="ion-social-github"></i></a> </h2></div>
+                    {% if page.arxiv %}
+                      <h2> <a href={{page.arxiv}} target='blank'><i class="ion-document-text"></i></a> <a href={{page.github}} target='blank'><i class="ion-social-github"></i></a> </h2></div>
+                    {% endif %}
             </div>
         </div>
     </div>
