--- a/css/style.css
+++ b/css/style.css
@@ -482,6 +482,14 @@ a.active {
 }
 
 
+.img-blog {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 80%;
+  padding: 4px;
+}
+
 /* projects section
 ==================================================*/
 
